# simulatetraj

./: .gitignore  .readthedoc.yaml  .readthedocs.yaml  README.md  larson.ipynb  pyproject.toml  simulate  simulate.py  test.py  uni.bat
SimulateTraj/: pyproject.toml
SimulateTraj/doc/: simulate.md
SimulateTraj/examples/: block_optimal.ipynb  larson.ipynb
SimulateTraj/simulatetraj/: __init__.py
doc/source/: api.rst  conf.py  index.rst  intro.rst
doc/source/examples/: block_optimal.ipynb
doc/source/examples/.ipynb_checkpoints/: larson-checkpoint.ipynb
examples/: block_optimal.ipynb  block_optimal.py  larson.ipynb  larson.py
simulatetraj/: simulate.py
tests/: test.py
