[tool.poetry]
name = "simulatetraj"
version = "0.1.0"
description = "A class to integrate ordinary differential equations using cvodes"
authors = ["sandeep <rskravi15@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
casadi = "^3.6.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

